--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  dio: ^4.0.0
+  shared_preferences: ^2.0.5
+  get: ^4.1.2
+  qrscan: ^0.2.22
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
